add NOTED.md, added notes.. edited html to add links, add navbar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/style.css">
-    <title>Document</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">  
+    <title>BlogIt!</title>
 </head>
 <body>
+    <nav class="#4db6ac teal lighten-2">
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">BlogIt!</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="#">FriendsBlogs</a></li>
+            <li><a href="#">WorldBlogs</a></li>
+            <li><a href="#">MyBlogs</a></li>
+          </ul>
+        </div>
+      </nav>
+
     <h1>Hello World!</h1>
 
+
+
+
+
+
+
+
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Connects to JS page -->
     <script src="javascripts/index.js"></script>
 </body>
 </html>
