add button to form to allow submit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <label for="author">Author:</label><br>
                 <input type="text" name="blog-author" id="blogAuthorInput"><br>
                 <label for="content">Content:</label><br>
-                <textarea type="text" name="blog-content" id="blogContentInput" rows="5" cols="50"></textarea>
+                <textarea type="text" name="blog-content" id="blogContentInput" rows="5" cols="50"></textarea><br>
+                <button type="submit">Create Blog</button>
             </form>
         </div>
     </div>
