--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
             <option value="myWorld">World</option>
             <option value="myAll">All</option>
         </select>
-        <div class="blogCards">
+        <div id="blogCards">
             <div class="blogCard">
                 <h3 id="blogTitle">blogTitle</h3>
                 <h5 id="blogAuthor">blogAuthor</h5>
                 <p id="blogContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque expedita vero at quam debitis laborum officia excepturi ea dolores odio placeat quasi velit minus nemo necessitatibus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti iusto ratione optio! Assumenda nam molestiae maiores quibusdam inventore? Doloribus, ducimus dolorem minima ex eligendi soluta quia facere quis necessitatibus iste? praesentium, unde saepe dolorem!</p>
                 <p id="blogPosted">posted:</p>
-            </div>
-            <div class="blogBtn">
-                <button class="" type="submit" name="action" id="editBlog">Edit</button>
-                <button class="" type="submit" name="action" id="deleteBlog">Delete</button>
+                <br>
+                <button class="editBtn" type="submit" name="action" id="editBlog">Edit</button>
+                <button class="dltBtn" type="submit" name="action" id="deleteBlog">Delete</button>
             </div>
         </div>
     </div>
