edit html to not show preset card

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <option value="myAll">All</option>
         </select>
         <div id="blogCards">
-            <div class="blogCard">
+            <!-- <div class="blogCard">
                 <h3 id="blogTitle">blogTitle</h3>
                 <h5 id="blogAuthor">blogAuthor</h5>
                 <p id="blogContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque expedita vero at quam debitis laborum officia excepturi ea dolores odio placeat quasi velit minus nemo necessitatibus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti iusto ratione optio! Assumenda nam molestiae maiores quibusdam inventore? Doloribus, ducimus dolorem minima ex eligendi soluta quia facere quis necessitatibus iste? praesentium, unde saepe dolorem!</p>
@@ -53,7 +53,7 @@
                 <br>
                 <button class="editBtn" type="submit" name="action" id="editBlog">Edit</button>
                 <button class="dltBtn" type="submit" name="action" id="deleteBlog">Delete</button>
-            </div>
+            </div> -->
         </div>
     </div>
     
