adjust html to alter labels

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/style.css">
     <!-- Compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
     <title>BlogIt!</title>
 </head>
 
@@ -40,9 +39,7 @@
     <div id="showBlogs" class="blogContainer">
         <select name="blog-select" id="selectBlogs">
             <option value="myBlog">myBlogs</option>
-            <option value="myFriends">Friends</option>
-            <option value="myWorld">World</option>
-            <option value="myAll">All</option>
+            <option value="dltBlog">removedBlogs</option>
         </select>
         <div id="blogCards">
             <!-- <div class="blogCard">
@@ -59,15 +56,6 @@
     
 
 
-
-
-
-
-
-
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- Connects to JS page -->
     <script src="javascripts/index.js"></script>
 </body>
