--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br>
     <div class="formContainer">
         <div id="createBlog" class="col s12 m6 black-text">
-            <form action="" id="createBlogForm" method="post" class="card teal lighten-4">
+            <form action="" id="createBlogForm" method="post" class="card">
                 <label for="title">Title:</label><br>
                 <input type="text" name="blog-title" id="blogTitleInput"><br>
                 <label for="author">Author:</label><br>
@@ -38,8 +38,8 @@
     <br>
     <div id="showBlogs" class="blogContainer">
         <select name="blog-select" id="selectBlogs">
-            <option value="myBlog">myBlogs</option>
-            <option value="dltBlog">removedBlogs</option>
+            <option value="currentBlogs">currentBlogs</option>
+            <option value="removedBlogs">removedBlogs</option>
         </select>
         <div id="blogCards">
             <!-- <div class="blogCard">
