--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="">
-    <nav class="">
+    <!-- <nav class="">
         <div id="navbar">
             <a href="#" class="brand-logo">BlogIt!</a>
             <ul class="navItems">
@@ -20,7 +20,7 @@
                 <li><a href="#">MyBlogs</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <br>
     <div class="formContainer">
         <div id="createBlog" class="col s12 m6 black-text">
