--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <br>
     <div id="showBlogs" class="blogContainer">
         <select name="blog-select" id="selectBlogs">
-            <option value="currentBlogs">currentBlogs</option>
-            <option value="removedBlogs">removedBlogs</option>
+            <option value="currentCards">currentCards</option>
+            <option value="removedCards">removedCards</option>
         </select>
         <div id="blogCards">
             <!-- <div class="blogCard">
