--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <input type="text" name="blog-author" id="blogAuthorInput"><br>
                 <label for="content">Content:</label><br>
                 <textarea type="text" name="blog-content" id="blogContentInput" rows="5" cols="50"></textarea><br>
-                <button type="submit">Create Blog</button>
+                <button type="submit">Create Card</button>
             </form>
         </div>
     </div>
