update html, js, css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>BlogIt!</title>
 </head>
 
-<body class="">
+<body>
     <!-- <nav class="">
         <div id="navbar">
             <a href="#" class="brand-logo">BlogIt!</a>
